[package]
name = "wmproxy"
version = "0.2.7"
edition = "2021"
authors = ["tickbh <tickdream125@hotmail.com>"]
description = " http https proxy by rust"
repository = "https://github.com/tickbh/wmproxy"
license = "Apache-2.0"
keywords = ["http2", "socks5", "websocket", "nginx", "proxy"]

[dependencies]

tokio = { version = "1.32.0", features = ["full", "tracing"] }
forever-rs = { version = "0.1.0" }
log = "0.4.19"
bitflags = "2.4"

tokio-util = "0.7"
rustls = { version = "0.22.2", default-features = false }
webpki-roots = "0.26.0"
rustls-pemfile = "2.0.0"
webpki = { version = "0.22", features = ["alloc", "std"] }
tokio-rustls = "0.25.0"
futures-core = { version = "0.3", default-features = false }
futures = "0.3.28"

env_logger = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4.0"
serde_yaml = "0.9"
serde_json = "1.0.107"
toml = "0.8.2"
lazy_static = "1.4.0"
rand = "0.8.5"
socket2 = "0.5.5"

log4rs = "1.2.0"

chrono = "0.4.31"

async-trait = "0.1.74"
rbtree = "0.2.0"

regex = "1.10.2"

async-std = "1.12.0"
acme-lib = "0.9.1"
base64 = "0.21.4"
async-recursion = "1.0.5"
bpaf = { version = "0.9.8", features = [
    "derive",
    "extradocs",
    "batteries",
    "autocomplete",
] }
webparse = { version = "0.2.6" }
wenmeng = { version = "0.2.6" }
console = "0.15.8"
local-ip-address = "0.5.7"
# wenmeng={git="https://github.com/tickbh/wenmeng.git"}
[features]
bright-color = ["bpaf/bright-color"]
dull-color = ["bpaf/dull-color"]

# [dependencies.webparse]
# path = "../webparse"

# [dependencies.wenmeng]
# path = "../wenmeng"
